Bug 247486 - automatic spell checker does not work any longer
Summary: automatic spell checker does not work any longer
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.13.5
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 185839 248381 271115 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-12 10:59 UTC by Martin L ü c h e m
Modified: 2011-08-30 07:14 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin L ü c h e m 2010-08-12 10:59:53 UTC
Version:           1.13.5
OS:                Linux

I changed nothing in my configuration, the default ist language "German", automatic spell checker does not work, switching language has no effect. 

Reproducible: Always

Steps to Reproduce:
Close message, close KMail, trying with different messages in different languages

Actual Results:  
persistent fault

Expected Results:  
After ending KMail and restarting i would have expected that the problem dissapears. In addition I would have expected that the change of language setting works but it is set back to german.

OS: Linux (x86_64) release 2.6.32-5-amd64
Compiler: cc
Comment 1 Fabian 2010-08-23 23:57:54 UTC
I can conform this behaviour.

KMail Version   1.13.5
KDE             4.5.00 (KDE 4.5.0)
OS              2.6.32-24-generic #41-Ubuntu SMP Thu Aug 19 01:38:40 UTC 2010 x86_64 GNU/Linux
Distribution    Kubuntu (10.04 + PPA Backports for KDE 4.5)
Language        German

Just changed from KDE 4.4.2 to 4.5.0
Live spell check worked before, but stopped working now. Manual spell check (check word by word) from menu works as expected.
Live spell check works in kwrite and kate. 

Workaround:
Enable "Automatische Rechtschreibprüfung in der Voreinstellung aktiviert" (translates to "Enable automatic spell check by default." or so) under 
system settings
-> "Regionales" ("language settings") 
-> "Rechtschreibprüfung" ("spell check")
Comment 2 Mat Lechner 2010-08-25 11:46:57 UTC
I can confirm this bug. It seems that automatic spell checking is only working, if the "enable automatic spell check by default" option mentioned in your workaround is ticked. I think this behaviour is quite counter-intuitve, because it overrides the KMail-settings, and users have no idea why.
Comment 3 jack 2010-09-13 13:41:27 UTC
Same problem here. Occur after updating as mentioned in OP.

I too think the workaround is unintuitive.
Comment 4 Martin L ü c h e m 2010-09-13 19:32:15 UTC
Hi,

Am Montag, 13. September 2010, um 13:41:31 schrieb jack:
> I too think the workaround is unintuitive.

by the way, the so called workaround, what do you mean? Changing the system 
settings? This does not work!

Regards, Martin
Comment 5 ancow 2010-09-13 22:16:00 UTC
It does. You might have to re-start KMail, Kontact or whatever, but after checking that option, automatic spell checking will once more work as before.

BTW, @ comment #3: it's a workaround, it doesn't have to be intuitive - it should be fixed.
Comment 6 Martin L ü c h e m 2010-09-13 22:24:54 UTC
Hi reini,

Am Montag, 13. September 2010, um 22:16:02 schrieb reini:
> It does. You might have to re-start KMail, Kontact or whatever, but after
> checking that option, automatic spell checking will once more work as
> before.

No, it does not work - at my system! Nothing changed after having set the 
central option in system settings!

Martin

KMail
Version 1.13.5
Unter KDE 4.4.5 (KDE 4.4.5)
Comment 7 ancow 2010-09-14 00:22:15 UTC
For me, this bug first occurred in KDE 4.5.0 - are you sure you aren't experiencing a different bug? Alternatively, the workaround might be specific to KDE 4.5.
Comment 8 Martin L ü c h e m 2010-09-14 00:29:55 UTC
Hello reini,

Am Dienstag, 14. September 2010, um 00:22:19 schrieb reini:
> For me, this bug first occurred in KDE 4.5.0 - are you sure you aren't
> experiencing a different bug? Alternatively, the workaround might be
> specific to KDE 4.5.

I reported the bug!

Regards, Martin
Comment 9 ancow 2010-09-14 01:49:24 UTC
Oops. I guess I *do* need to get some sleep... (it seems I focussed on comment #1)

Does your ~/.kde/share/config/sonnetrc contain a line "checkerEnabledByDefault=true" in the "Spelling" section? If no, try adding/changing it. If yes, I guess this workaround *is* specific to KDE 4.5.
Comment 10 Martin L ü c h e m 2010-09-14 20:30:21 UTC
Hallo reini,

Am Dienstag, 14. September 2010, um 01:49:25 schrieb reini:
> Does your ~/.kde/share/config/sonnetrc contain a line
> "checkerEnabledByDefault=true" in the "Spelling" section? If no, try
> adding/changing it. If yes, I guess this workaround is specific to KDE 4.5.

yes it does! It looks like this:

[Spelling]
backgroundCheckerEnabled=true
checkUppercase=true
checkerEnabledByDefault=true
defaultClient=
defaultLanguage=de_DE
skipRunTogether=true


Regards, Martin
Comment 11 Mike Frysinger 2010-09-28 10:09:49 UTC
you can find these settings from the kmail composer window too

Settings -> Spellchecker -> Automatic spell checking enabled by default

which is weird as under the Composer window, Options->Automatic Spellchecker is already enabled
Comment 12 Marc Deop 2011-01-08 15:27:44 UTC
Spellchecker does not work for me in any KDE app. Might be a problem in kdelibs?

Regards
Comment 13 Ekkehard Blanz 2011-02-22 19:58:11 UTC
The file ~/.kde/share/config/sonnetrc was not present in my initial install of KDE 4.5.1 (Kubuntu 10.10, amd64); KMail version is 1.13.5.  It only appeared after I installed an additional language and noticed that no language was set in "System Settings"->"Locale" by default at all.  After I set that, the file was there and the workaround as described by Fabian above worked.

Before then: 
"Automatic spell checking enabled by default" is ticked correctly in "Settings"->"Spellchecker..." and in "Options" in Kontact/KMail, but has no effect on new mail compositions, i.e. for new mail compositions spell checking is always off.  Turning this setting off and then on again in "Settings"->"Spellchecker..." enables automatic spell checking not immediately but after a few more keystrokes in the mail body - but only for the currently composed E-mail.  Doing the same thing with the redundant (well - one of the two is redundant IMHO) setting under "Options" has no effect at all.

Automatic spell checking worked as expected (and persistently across several invocations) in Kate, also before the global language setting.
Comment 14 Mike Frysinger 2011-02-23 01:35:02 UTC
thanks, i was seeing the same behavior.  when i went into my system settings, it warned me that the language i had selected was no longer available (or something like that).  so once i went through and reselected all my localization settings, the automatic spell checking in kmail seems to work a lot better now.

here's hoping it keeps working :)
Comment 15 Martin L ü c h e m 2011-02-23 12:43:52 UTC
"a lot better", does this mean it works or not? ;-)

Martin
-------- Original-Nachricht --------
> Datum: Wed, 23 Feb 2011 01:35:03 +0100 (CET)
> Von: Mike Frysinger <vapier@gentoo.org>
> An: Heinrich20@gmx.de
> Betreff: [Bug 247486] automatic spell checker  does not work any longer

> https://bugs.kde.org/show_bug.cgi?id=247486
> 
> 
> 
> 
> 
> --- Comment #14 from Mike Frysinger <vapier gentoo org>  2011-02-23
> 01:35:02 ---
> thanks, i was seeing the same behavior.  when i went into my system
> settings,
> it warned me that the language i had selected was no longer available (or
> something like that).  so once i went through and reselected all my
> localization settings, the automatic spell checking in kmail seems to work
> a
> lot better now.
> 
> here's hoping it keeps working :)
> 
> -- 
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
Comment 16 Mike Frysinger 2011-02-23 18:44:22 UTC
it seems to be working now without me having to toggle options on the fly, but i dont want to jinx it :x
Comment 17 Fabian 2011-02-23 21:24:37 UTC
Still not fixed (for me). Behaviour and workaround is still as described above.

KMail 1.13.5; 
KDE 4.6.00

I suppose there won't be any fix before KMail 2, which should be there in the next months...

Fabian
Comment 18 Thomas McGuire 2011-05-11 19:25:50 UTC
*** Bug 248381 has been marked as a duplicate of this bug. ***
Comment 19 Thomas McGuire 2011-05-11 19:25:55 UTC
*** Bug 271115 has been marked as a duplicate of this bug. ***
Comment 20 Thomas McGuire 2011-05-11 19:27:31 UTC
Git commit 6f62ea1bff318d8efea42f59bdc965ee2ab187a0 by Thomas McGuire.
Committed on 11/05/2011 at 19:21.
Pushed by tmcguire into branch '4.4'.

Make spell checking work again.
The text edit used the wrong config file for loading spell settings.
After using the config file, the correct settigns get loaded again,
since the Loader from Sonnet is a singleton and therefore shares the
settings, so even the textedit with the wrong settings file name gets
updated.

cherry-picked from d1708effbb68d6eae36ee5177a599c965973725f.

BUG: 247486

M  +1    -1    kmail/kmcomposereditor.cpp     
M  +12   -0    libkdepim/kmeditor.cpp     
M  +6    -0    libkdepim/kmeditor.h     

http://commits.kde.org/kdepim/6f62ea1bff318d8efea42f59bdc965ee2ab187a0
Comment 21 Tom Chiverton 2011-05-11 19:55:24 UTC
Makes you wonder how much testing is done before a release... maybe the KDE PIM team is too busy working on the unreleased and feature incomplete replacement...
Comment 22 Anguo 2011-08-30 07:14:14 UTC
*** Bug 185839 has been marked as a duplicate of this bug. ***