Make spell checking work again. The text edit used the wrong config file for loading spell settings. After using the config file, the correct settigns get loaded again, since the Loader from Sonnet is a singleton and therefore shares the settings, so even the textedit with the wrong settings file name gets updated.

cherry-picked from d1708effbb68d6eae36ee5177a599c965973725f.

BUG: 247486